# aihub

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  GITHUB_PUSH.bat  HOW_TO_PUSH.txt  PROGRESS.md  PUSH_NOW.bat  README.md  ROADMAP.md  build.bat  compile_now.bat  install_cmake.bat  main.py  requirements.txt  vcpkg.json
config/: settings.py
src/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  main.cpp  main_imgui.cpp
src/Browser/: BrowserManager.cpp  BrowserManager.h  ChatGPTBrowser.cpp  ChatGPTBrowser.h  ChromeInstance.cpp  ChromeInstance.h  DeepSeekBrowser.cpp  DeepSeekBrowser.h  KiroBrowser.cpp  KiroBrowser.h  WebView2Instance.cpp  WebView2Instance.h
src/Chat/: ChatWidget.h
src/Controllers/: ChatController.cpp  ChatController.h
src/Core/: AIRequest.h  BrowserFactory.cpp  BrowserFactory.h  Event.h  EventBus.h  HotkeyManager.h  IBrowser.h  PerformanceMonitor.h  ThreadPool.h
src/Database/: DatabaseManager.h
src/Logger/: LogWidget.h  Logger.cpp  Logger.h
src/Models/: ChatMessage.h  Conversation.h  Provider.h  UserSettings.h
src/Services/: AIService.cpp  AIService.h  BrowserService.cpp  BrowserService.h  ChatService.cpp  ChatService.h  ConversationManager.h  ExportService.cpp  ExportService.h  HistoryService.cpp  HistoryService.h  PromptManager.h  ThemeService.cpp  ThemeService.h  WorkspaceManager.h
src/Settings/: SettingsDialog.h  SettingsManager.h
src/Sidebar/: Sidebar.h
src/UI/: Animation.h  ChatWindow.cpp  ChatWindow.h  IDEWindow.cpp  IDEWindow.h  ImGuiTheme.cpp  ImGuiTheme.h  LogWindow.cpp  LogWindow.h  ParticleSystem.h  SettingsWindow.cpp  SettingsWindow.h  SidebarWindow.cpp  SidebarWindow.h  StatusBar.h
src/Utils/: Database.h  StyleManager.h  WorkspaceManager.h
